fix(sonar): resolve 11 new-code issues + add coverage tests
Sonar's new-code gate flagged 11 issues on the v0.12.26 changes plus a
sub-30% coverage rating on the 219 new lines. This commit addresses
both.

Bugs (S2259, 2x):
- CompactionGate.java: 'primary' nullable at line 98 — added an
  explicit null-guard early-return that pacifies Sonar and acts as
  defense-in-depth if a caller ever passes a half-configured provider.
- ContextWindowManager.java: 'truncated' nullable at the truncation
  call site — removed the unreachable `if (original == null) return
  null` from truncateToolResultContent. The helper now requires non-
  null per its javadoc; callers already filter via instanceof String.

Code smells:
- S6885 (3x): Math.min(max, Math.max(min, value)) → Math.clamp(value,
  min, max). Java 21+ idiom; clearer at a glance.
- S3776 (2x): Cognitive complexity 16 / 19 reduced by extracting
  helpers — truncateOversizedToolResults split into collectCandidates,
  attemptTruncate, plus a TruncationSavings record; TokenizerCalibration-
  Job.doJob split into collectRatios, applyCalibrations,
  maybeUpdateMultiplier.
- S135 (2x): Multiple continue/break statements in the truncation loop
  resolved by the helper extraction — attemptTruncate now returns null
  vs Savings instead of using continue.
- S7467 (2x): Unused catch parameters renamed to '_' (unnamed pattern,
  Java 22+).

Coverage tests:
- New ContextWindowSafetyMultiplierTest covers the 3-tier lookup
  (per-model > per-provider > global > default), clamp range,
  malformed-value fallthrough, matched-skip logic, and the head/tail
  truncation helper boundary cases.
- New TokenizerCalibrationJobTest covers parseSample (matched skip,
  ratio extraction, missing fields, malformed JSON), p95 / maxOf, and
  applyCalibrations (writes on first observation, skips small-delta
  updates, writes when delta clears threshold). collectRatios's empty
  case is covered; DB-bound paths stay out of unit scope.

Co-Authored-By: Claude 